# baybridge

./: .gitignore  README.md  pyproject.toml
docs/: backend-status.md
plans/: cutedsl-api-checklist.md  flydsl-integration.md  mlir-asm-backend-plan.md  nvidia-ptx-backend-plan.md
src/baybridge/: __init__.py  backend.py  compiler.py  cuda_driver.py  diagnostics.py  dtypes.py  (+13 more)
tests/: test_api.py  test_arch_surface.py  test_backend_aster_exec.py  test_backend_aster_ref.py  test_backend_benchmark_tools.py  test_backend_flydsl_exec.py  test_backend_flydsl_ref.py  test_backend_gpu.py  test_backend_hipcc_exec.py  test_backend_hipkittens_exec.py  test_backend_hipkittens_exec_norm_attention.py  test_backend_hipkittens_ref.py  test_backend_mlir.py  test_backend_ptx_exec.py  test_backend_ptx_ref.py  test_backend_waveasm_exec.py  test_backend_waveasm_ref.py  test_cache.py  test_compat_shims.py  test_composed_layout.py  test_control_flow.py  test_cooperative_launch.py  test_cuda_bindings.py  test_cuda_driver_runtime.py  test_cute_surface_api.py  test_data_types.py  test_dynamic_shared_memory.py  test_elementwise.py  test_elementwise_add_copyatom_like.py  test_elementwise_apply_like.py  test_elementwise_helpers.py  test_examples_runtime.py  test_examples_tracing.py  test_execution_helpers.py  test_gemm_helpers.py  test_hip_runtime.py  test_interop.py  test_layout_algebra.py  test_layouts.py  test_local_partition.py  (+15 more)
tools/: analyze_thirdparty_samples.py  backend_benchmark_kernels.py  compare_backends.py  emit_waveasm_repro.py  fetch_thirdparty_samples.py  report_cold_warm.py
(+23 files in other folders)
