[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "baybridge"
version = "0.1.0"
description = "AMD-focused kernel DSL and portability layer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/baybridge", "src/cuda"]
